css/Top.css
#top {
    /* Prevent highlight / selections of the arrows */
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
    z-index:99;
}

div #top {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 80px;
    background-color: rgb(253, 94, 46);
}

/* Editting the logo image */
#top .logo {
    position: fixed;
    width: auto;
    height: 70px;
    left: 15%;
    top: 6px;
    bottom: 10px;
    z-index:200;
}

/*
This is the address at the top area of the screen
The location image should be placed inside the textfield
*/
#top .topAddress {
    position: relative;
    width: 250px;
}

#top .topAddress input {
    position: relative;
    width: 25%;
    height: 20px;
    padding: 12px;
    border-radius: 4px 0 0 4px;
    text-indent: 30px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 18px;
    top: 20%;
    left: 33%;
    border: solid white 0.5px;
    color: rgb(90, 90, 90);
    background: rgba(255, 255, 255, 0.836);

}

#top .topAddress button{
    position: relative;
    width: 77px;
    height: 46px;
    padding: 10px;
    border-radius: 0 4px 4px 0;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
    top: 19%;
    /* left: 350px; */
    left: 32.6%;
    border: solid white 0.5px;
    color: white;
    background-color: transparent;
}

#top .topAddress button:hover{
    background: #f7eae3;
    color: rgb(88, 86, 86);
    cursor: pointer;
}

#top .topAddress img {
    position: fixed;
    /* width: auto; */
    height: 30px;
    top: 25px;
    left: 33.5%;
    /* left: 50%; */
}

#top .topAddress #changeFeedback {
    position:fixed;
    left:44%;
    top:75px;

    background-color: rgba(0, 0, 0, 0.582);
    padding: 5px;
    border-radius: 5px;

    color:white;
    font-weight:normal;
    display:none;
}

#top .topAddress #changeFeedback:after {
    content: '';
    position: absolute;
    margin-left: -10px;
	margin-top: -10px;
	top: 0;
	left: 50%;
	width: 0;
	height: 0;
	border: 10px solid transparent;
	border-bottom-color:rgba(0, 0, 0, 0.445);
	border-top: 0;
}

#top #included #top #shoppingCart {
    /* Always clickable */
    z-index:299;
    cursor:pointer;
}

#shoppingCart img {
    position: absolute;
    right: 20%;
    top: 25px;
    height: 35px;
    width: auto;
    z-index:299;
}

#shoppingCart img:hover {
    opacity: 0.6;
    padding: 3px;
    position: absolute;
    top: 23px;
    right: 20%;
}

#shoppingCart #cartNotification {
    position:absolute;
    color:rgb(248, 14, 14); 
    right:19%;
    top:12%;
    z-index:350;
    font-weight:550;
    font-size:40px;

    /* -webkit-text-fill-color:rgb(253, 73, 28); */
    -webkit-text-stroke-width: 10px;
    -webkit-text-stroke: 1.5px;
    -webkit-text-stroke-color:rgb(255, 255, 255);
    visibility:hidden;

    -webkit-animation-name: turnAnim;
    animation: turnAnim 5s infinite;
}

/*
    Swinging animation obtained from https://www.tutorialspoint.com/css/css_animation_swing.htm
    This provides the back and forth movement on the notification icon
*/
         @-webkit-keyframes turnAnim {
            20%, 40%, 60%, 80%, 100% { -webkit-transform-origin: top center; }
            20% { -webkit-transform: rotate(19deg); }
            40% { -webkit-transform: rotate(-14deg); }
            60% { -webkit-transform: rotate(8deg); }
            80% { -webkit-transform: rotate(-8deg); }
            100% { -webkit-transform: rotate(0deg); }
         }

         @keyframes turnAnim {
            20% { transform: rotate(19deg); }
            40% { transform: rotate(-14deg); }
            60% { transform: rotate(8deg); }
            80% { transform: rotate(-8deg); }
            100% { transform: rotate(0deg); }
         }

#invis {
    z-index:-1;
    background-color:black;
    border-width:5px;
    border-style:solid;
    background:border-box;
    position:absolute;
    width:100%;
    height:100%;
    top:0;
}

#cartPopUp {
    z-index:199;
    position:fixed;
    right: 5%;
    top:80px;
    width:300px;

    /*The default height will be 'min-height'*/
    min-height:430px;
    box-sizing:border-box;
    height:480px;

    background-color: rgba(32, 31, 31, 0.726); /* Black w/ opacity */
    border: solid rgba(78, 78, 78, 0.9) 1px;
    border-radius: 15px;
    display: none;
    font-family: Arial, Helvetica, sans-serif;
    font-size:16.5px;
    /* font-weight: 200; */
}

#cartPopUp #closeWindow {
    position:relative;
    top: 5px;
    left:270px;
    color: #f1f1f1;
    font-weight: 400;
    font-size: 16px;
    cursor:pointer;
}
#cartPopUp #details {
    position:relative;
    font-size: 18px;
    color: white;
    top: 5px;
}

#cartPopUp #closeWindow:hover {
    color: rgb(255, 115, 34);
}

#cartPopUp #allOrders {
    /*
        If the user has lots of orders, there will be a scroll bar for the items
        Rather than the items being continually displayed
    */
    overflow-y:auto;
    height:200px;
    margin-top: 10px;

    /* Different color so its noticeable*/
    background-color:#f0f0f0;
    color:rgb(48, 48, 48);
    text-indent: 15px;
}

#cartPopUp #allOrders #empty-message {
    position: relative;
    top: 20px;
    font-size: 16px;
}

#cartPopUp #totalsSection {
    position:relative;
    width:auto;
    font-size: 16px;
    /* height:100px; */
    left: 20px;
    /* padding:20px; */
    top: 12px;

    display:inline-block;
    color:white;
}

.order {
    position:relative;
    margin-top: 5px;
    margin-bottom: 5px;
    padding:5px;
    top:10px;
}

.cartDividor{
    opacity: 0.3;
    position: relative;
    right: 20px;
    width: 240px;
    margin-top: 10px;
    margin-bottom: 10px;
}


#cartPopUp #makeOrder {
    position: absolute;
    padding:10px;
    left:31%;
    top: 420px;
    margin-bottom: 10px;
    /* top: 50px; */
    color: white; /* Text color */
    background-color: transparent; /* Remove background color */
    border: 1.5px solid white; /* Border thickness, line style, and color */
    border-radius: 5px; /* Adds curve to border corners */
    text-transform: uppercase; /* Make letters uppercase */
    cursor:pointer;
}

#cartPopUp #makeOrder:hover {
    background-color: rgba(255, 244, 225, 0.877);
    color: rgb(248, 99, 31);
}

.count {
    position:relative;
    left:1%;
}

#addRemove .addToCart {
    margin:2px;
    font-weight:400;
    cursor:pointer;
}

#addRemove .removeFromCart {
    margin:2px;
    font-weight:400;
    cursor:pointer;
}

#cartPopUp #totalAfterCoupon {
    visibility:hidden;
    text-decoration:none !important; /* remove strike-through */
    padding-left:5px;
    color:rgb(132, 226, 132);
}

#cartPopUp #CouponTitle {
    position:relative;
    visibility:hidden;
    color:white;
    padding-left: 20px;
    font-size: 16.5px;
    top:-55px !important;
}

#cartPopUp #CouponTitle #Coupon {
    color:lightgreen;
}

#cartPopUp #tipSection {
    visibility: hidden;
    position: absolute;
    font-size: 16.5px;
    font-weight: 400;
    border-radius:10px;
    height:160px;
    width:200px;
    left:-222px;
    bottom:65px;
    background-color: rgba(32, 31, 31, 0.726); /* Black w/ opacity */
    border: solid rgba(78, 78, 78, 0.9) 1px;
    color: white;
    text-align:left;
    padding:10px;
}

#cartPopUp #tipSection #tipTitle {
    text-align:center;
    background-color:rgba(114, 194, 68, 0.753);
    /* color: rgb(145, 201, 112); */
    border-radius:5px;
    font-size:18px;
    padding: 3px;
    font-weight: 700;
}

#cartPopUp #tipText {
    padding-left:2px;
    margin-top: 10px;
}

/*
This is the lines that divide the portions of the screens
*/
.dividers {
    position: relative;
    top: 60px;
    opacity: 0.2;
}

/*screen size change*/
@media only screen and (max-width: 800px) {
    #top .logo{
        position: fixed;
        left: 3%;
        width: auto;
        height: 70px;
        top: 6px;
        bottom: 10px;
        z-index:200;
    }

    #shoppingCart img {
        position: absolute;
        right: 3%;
        top: 25px;
        height: 35px;
        width: auto;
        z-index:299;
    }

    #top .topAddress input {
        position: relative;
        width: 30%;
        height: 20px;
        padding: 10px;
        border-radius: 4px 0 0 4px;
        text-indent: 30px;
        font-family: Arial, Helvetica, sans-serif;
        font-size: 18px;
        top: 20%;
        left: 33%;
        border: solid white 0.5px;
        color: rgb(90, 90, 90);
        background: rgba(255, 255, 255, 0.836);

    }

    #top .topAddress button{
        position: relative;
        width: 76px;
        height: 42px;
        padding: 8px;
        border-radius: 0 4px 4px 0;

        font-family: Arial, Helvetica, sans-serif;
        font-size: 16px;
        top: 19%;
        /* left: 350px; */
        left: 32%;
        border: solid white 0.5px;
        color: white;
        background-color: transparent;
    }

    #top .topAddress img {
        position: relative;
        height: 30px;
        top: 25px;
        left: -85px;
    }
}

